--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="user">
+		<img id="userphoto">
+		<h4 id="fName"> </h4>
+	</div>
+
+	<div class="details">
+		<strong> Additional Info </strong>
+		<div id="additionalinfo"> </div>
+	</div>
+
+	<div class="buttons">
+		<button data-attr="age" id="agebtn" > Display Age </button>
+		<button data-attr="email" id="emailbtn"> Display Email </button>
+		<button data-attr="phone" id="phonebtn"> Display Phone </button>
+	</div>
+
+	<div class="button">
+		<button id="getUser"> Display Another User </button>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
